# morse

./: .bzrignore  .gitignore  .mailmap  .travis-before.bash  .travis-test.py  .travis-upload.bash  .travis.bash  .travis.yml  0001-Catch-an-error-that-can-be-trown-while-closing-a-soc.patch  0001-fixed-uncatched-error-in-socket_request_manager.py.patch  AUTHORS  CITATION  CMakeLists.txt  DEADJOE  INSTALL  LICENSE  README  README.md  RELEASE_NOTES  TODO  TODO.pr2  appveyor.yml  morse-windows.spec  morse.iss  setup.py  tailor.conf  winbuild.bat
src/morse/: CMakeLists.txt  __init__.py  environments.py  init_middleware.py
src/morse/actuators/: GenericHydrodynamicDrag.py  WamVHydrodynamics.py  armature.py  armature_actuator.py  arucomarker.py  bluefin21_hydrodynamics.py  buoyancy.py  current.py  destination.py  drag.py  external_force.py  fixedthrusters.py  force_torque.py  gripper.py  healer.py  ik_control.py  joystick.py  keyboard.py  kuka-ik.py  kuka.py  kuka_ik.py  kuka_lwr.py  light.py  mocap_control.py  orientation.py  pa-10.py  pa_10.py  platine.py  ptu.py  quadrotor_dynamic_control.py  rotorcraft_attitude.py  rotorcraft_velocity.py  rotorcraft_waypoint.py  sealevel.py  set_pose.py  sound.py  stabilized_quadrotor.py  steer_force.py  teleport.py  torque.py  (+5 more)
src/morse/blender/: billboard.py  calling.py  healer.py  hud_text.py  human_control.py  human_head.py  human_stance.py  ik_human_control.py  lights.py  main.py  mocap_human_control.py  mouse_drag.py  victim.py  view_camera.py
src/morse/builder/: CMakeLists.txt  __init__.py  abstractcomponent.py  actuators.py  blend_to_python.py  blenderobjects.py  bpymorse.py  components.py  creator.py  data.py  environment.py  experiments.py  generator.py  io_export_morse.py  middlewares.py  morse_export.py  morsebuilder.py  robots.py  sensors.py  setup.py  urdf.py
src/morse/core/: abstractobject.py  actuator.py  ansistrm.py  blenderapi.py  datastream.py  exceptions.py  external_object.py  logging.py  mathutils.py  middleware.py  modifier.py  morse_time.py  multinode.py  object.py  overlay.py  request_manager.py  robot.py  sensor.py  services.py  status.py  supervision_services.py  wheeled_robot.py  zone.py
src/morse/geolandloader/: geoDTMLoader.py  geoDataLoaderPanel.py  geoLandPlugin.py  geoShapefileLoader.py
src/morse/helpers/: MorseMain.py  actuator.py  colors.py  components.py  compound.py  controller.py  coordinates.py  filt2.py  geo_math.py  joints.py  loading.py  main.py  math.py  middleware.py  morse_math.py  motion.py  object.py  objects.py  passive_objects.py  request_manager.py  robot.py  sensor.py  statistics.py  transformation.py  velocity.py
src/morse/human/: human_control.py  position.py  rotation_head.py
src/morse/middleware/: CMakeLists.txt  __init__.py  abstract_datastream.py  hla_datastream.py  hla_mw.py  json.py  mavlink_datastream.py  moos_datastream.py  moos_mw.py  pocolibs.py  pocolibs_datastream.py  pocolibs_mw.py  pocolibs_request_manager.py  pprzlink_datastream.py  ros_datastream.py  ros_mw.py  ros_request_manager.py  socket_datastream.py  socket_mw.py  socket_request_manager.py  text_datastream.py  text_mw.py  text_out.py  yarp.py  yarp_datastream.py  yarp_json_request_manager.py  yarp_mw.py  yarp_request_manager.py
src/morse/modifiers/: .utm_mod.py.swp  CMakeLists.txt  IMUMod.py  OdometryFrameModifier.py  PoseMod.py  __init__.py  abstract_modifier.py  compass_noise.py  ecef.py  enu_ned_mod.py  feet.py  gaussian.c  geocentric.py  geodetic.py  gps_noise.py  imu_noise.py  json_mod.py  ned.py  ned_mod.py  odometry_noise.py  pose_noise.py  utm.py  utm_mod.py
src/morse/multinode/: CMakeLists.txt  hla.py  morse.fed  socket.py
src/morse/robots/: BF21.py  Hummer.py  atrv.py  b21.py  daurade.py  environment.py  fakerobot.py  fuchs.py  grasper.py  grasping_robot.py  human.py  hummer.py  ik_human.py  jido.py  kuka_lwr.py  mocap_human.py  morsy.py  patrolbot.py  pioneer3dx.py  pr2.py  quadrotor.py  quadrotor_dynamic.py  ressac.py  rmax.py  segwayrmp400.py  submarine.py  victim.py  wamv.py
src/morse/sensors/: CMakeLists.txt  CameraSim.py  CameraSimMoos.py  Dvl.py  Fls.py  GeomagnetismHeader.h  GeomagnetismLibrary.c  Lidar.py  LidarMoos.py  MultiStaticSonar.py  Object.capnp  ObjectServer.py  ObjectServerMoos.py  ObjectServerMoos_deprecated.py  ObjectServer_deprecated.py  Object_deprecated.capnp  OptixCamera.py  OptixCameraMoos.py  Radar.py  Sonar.py  Thermometer.py  accelerometer.py  airspeed.py  armature_pose.py  attitude.py  barometer.py  baterry.py  battery.py  camera.py  clock.py  collision.py  compass.py  compound.py  depth_camera.py  depth_camera_aggregator.py  depth_camera_python.py  depthaggregator.c  game_property.py  gps.py  gyroscope.py  (+37 more)
src/morse/services/: communication_services.py  supervision_services.py  time_services.py
src/morse/testing/: exceptions.py  moos.py  ros.py  testing.py
testing/: CMakeLists.txt  test_all.py
testing/base/: CMakeLists.txt  accelerometer_testing.py  airspeed_testing.py  armature_actuator_testing.py  armature_pose_testing.py  armature_testing.py  attitude_testing.py  barometer_testing.py  base_testing.py  battery_testing.py  builder_wheeled_robot.py  collision_testing.py  communication_service_testing.py  depth_camera_testing.py  destination_testing.py  drag_testing.py  ecef_testing.py  external_force_testing.py  feet_testing.py  friction_testing.py  geodetic_testing.py  gps_testing.py  gripper_testing.py  gyroscope_testing.py  imu_noise_testing.py  infrared_testing.py  kuka_lwr_testing.py  levels.py  light_testing.py  magnetometer_testing.py  multiple_ptu_testing.py  ned_testing.py  noise_testing.py  odometry_testing.py  orientation_speed_testing.py  orientation_testing.py  pose_noise_testing.py  pose_testing.py  proximity_testing.py  ptu_testing.py  (+31 more)
testing/failures/: CMakeLists.txt  invalid_builder_syntax.py
testing/human/: CMakeLists.txt  human_base.py  human_ik.py  human_service.py  multiple_human.py
testing/middlewares/moos/: CMakeLists.txt  moos_datastream_testing.py
testing/urdf/: meka_testing.py  pepper_testing.py  r2d2_testing.py
(+1545 files in other folders)
