# build and install C modifiers
INCLUDE_DIRECTORIES(${PYTHON3_INCLUDE_DIR})

ADD_LIBRARY (gaussian SHARED gaussian.c)
SET_TARGET_PROPERTIES (gaussian PROPERTIES PREFIX "")
if (WIN32)
    ADD_DEFINITIONS(-D_WIN32)
else (WIN32)
    SET_TARGET_PROPERTIES (gaussian PROPERTIES SUFFIX ".so")
endif (WIN32)
TARGET_LINK_LIBRARIES (gaussian ${PYTHON3_LIBRARY})
INSTALL(TARGETS gaussian
		DESTINATION ${PYTHON_INSTDIR}/morse/modifiers)

# install python files
FILE(GLOB PYTHON_FILES *.py)
INSTALL(FILES ${PYTHON_FILES}
        DESTINATION ${PYTHON_INSTDIR}/morse/modifiers)

